--- a/src/app/compoents/header/header.component.html
+++ b/src/app/compoents/header/header.component.html
@@ -3,7 +3,8 @@
 
 <header class="header">
   <a href="https://go.nordvpn.net/aff_c?offer_id=15&aff_id=136029&url_id=902"
-   rel="nofollow"
+   target="_blank"
+   rel="nofollow noopener"
    class="block bg-slate-900 text-white p-2">
   <div class="mx-auto container px-4 py-3 flex items-center justify-between text-sm gap-3">
     
