--- a/src/app/compoents/header/header.component.html
+++ b/src/app/compoents/header/header.component.html
@@ -24,7 +24,7 @@
           NordVPN Black Friday.
         </p>
         <p class="text-slate-300">
-          74% off + 3 free months. Protect your VPN privacy.
+          74% off + 3 free months. Protect your privacy Now.
         </p>
       </div>
     </div>
