--- a/src/app/compoents/header/header.component.html
+++ b/src/app/compoents/header/header.component.html
@@ -6,7 +6,7 @@
    target="_blank"
    rel="nofollow noopener"
    class="block bg-slate-900 text-white p-2 animate-pulse hover:animate-none">
-  <div class="mx-auto container p-0 px-4 py-3 flex items-center justify-between text-sm gap-3">
+  <div class="mx-auto container link- p-0 px-4 py-3 flex items-center justify-between text-sm gap-3">
 
     <div class="flex items-start gap-3">
       <svg class="h-5 w-5 text-sky-400 animate-bounce"
@@ -24,7 +24,7 @@
           NordVPN Black Friday.
         </p>
         <p class="text-slate-300">
-          74% off + 3 free months. Protect your privacy Now.
+          74% off + 3 free months. Protect your privacy now.
         </p>
       </div>
     </div>
