--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -13,7 +13,7 @@
         Best Temporary email created for you below. Use it for signups or OTPs while keeping your privacy safe.
       </p>
 
-      <div class="container mx-auto px-4 max-w-5xl mt-8">
+      <div class="container mx-auto md:px-4 max-w-5xl mt-8">
 
         <div class="rounded-2xl bg-white/80 backdrop-blur-sm shadow-2xl ring-1 ring-gray-200 animate-scale-in"
           style="animation-delay: 0.2s">
